# OC_P5

./: .env.example  .env.production  .flake8  .gitignore  CLEANUP_COMPLETION_REPORT.md  Dockerfile  HF_DEPLOYMENT.md  HF_TROUBLESHOOTING.md  QUICK_DEPLOY.md  README.md  README.old.md  README_HF.md  api.py  app.py  db_models.py  etapes.txt  main.py  mkdocs.yml  mlflow.db  models.py  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  requirements_prod.txt  test_api.py  test_deployment.sh
.github/actions/setup-poetry/: action.yml
.github/scripts/: deploy_to_hf.py
.github/workflows/: ci-cd.yml
.huggingface/: space.yml
docs/: API.md  API_GUIDE.md  AUTHENTICATION.md  CICD_DEPLOYMENT.md  DEPLOYMENT.md  DEPLOYMENT_SUCCESS.md  DOCUMENTATION_INVENTORY.md  ETAPE_6_COMPLETE.md  ETAT_PRE_SOUS_ETAPE_2.md  LOGGING_GUIDE.md  MERGE_CHECKLIST.md  MODEL_TECHNICAL.md  README_HF.md  README_MKDOCS.md  RELEASE_NOTES_v2.1.0.md  SOUS_ETAPE_2_RAPPORT.md  SOUS_ETAPE_3_RAPPORT.md  SOUS_ETAPE_4_RAPPORT.md  TEST_COVERAGE.md  TRAINING.md  VERIFICATION_CHECKLIST.md  api.md  api_documentation.md  architecture.md  changelog.md  configuration.md  database_guide.md  database_setup.md  deployment.md  deployment_guide.md  index.md  installation.md  mlflow_guide.md  model.md  pipeline.md  quickstart.md  schema.puml  standards.md  tests_report.md  training.md
docs/api/: guide.md
docs/model/: technical.md
examples/: 01_find_best_model.py  02_compare_models.py  03_model_registry.py  README.md
exemples/: 01_predict_single_employee.json  02_predict_batch_eval.csv  02_predict_batch_sirh.csv  02_predict_batch_sondage.csv  GUIDE_DEMO.txt  README.md  demo_batch.py  demo_batch_hf.py  demo_unitaire.py  demo_unitaire_hf.py  lancer_api.sh  predictions_batch_20260112_043228.csv
ml_model/: preprocess.py  train_model.py
mlruns/0/models/m-bc27150cf27f424bbaa6bed89a4da2ac/artifacts/: MLmodel  model.pkl  registered_model_meta  requirements.txt
mlruns/1/40e43c8e425345bab3d19f27eb8fe5d8/artifacts/preprocessing/: onehot_encoder.joblib  ordinal_encoder.joblib  scaler.joblib
mlruns/1/models/m-182eef898cfe43cbaa636ef4c7d58d65/artifacts/: MLmodel  model.pkl
mlruns/1/models/m-cd1ebd0e2f8c40c58d650217ec91ffe9/artifacts/: MLmodel  conda.yaml  registered_model_meta
scripts/: README.md  create_db.py  export_requirements.sh  fix_lint.py  generate_requirements_hf.sh  insert_dataset.py  register_model_to_hf.py  run_local.sh  start_mlflow.sh  test_db.py
src/: Dockerfile  __init__.py  auth.py  config.py  gradio_ui.py  logger.py  models.py  preprocessing.py  rate_limit.py  schemas.py
tests/: README.md  conftest.py  test_api_auth.py  test_api_demo.py  test_api_health.py  test_api_predict.py  test_api_validation.py  test_basic.py  test_database.py  test_functional.py  test_mlflow_local.py  test_mlflow_quick.py  test_model.py
tests/test_api/: test_api_auth.py
tests/test_database/: test_database.py  test_db_failures.py
tests/test_functional/: test_functional.py
