[tool.poetry]
name = "oc-p5"
version = "0.1.0"
description = "Projet OpenClassRoom - Modèle ML de prédiction du turnover avec MLflow"
authors = ["chaton59 <v.trouillez@gmail.com>"]
readme = "README.md"
packages = [{include = "ml_model"}]

[tool.poetry.dependencies]
python = "^3.12"
mlflow = "^3.8.0"
scikit-learn = "1.6.1"
imbalanced-learn = "0.13.0"
xgboost = "^2.1.0"
scipy = "^1.14.0"
numpy = "^2.0.0"
pandas = "^2.2.0"
joblib = "^1.4.0"
gradio = "^5.9.0"
huggingface-hub = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pytest-cov = "^7.0.0"
black = "^25.0.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"