[tool.poetry]
name = "oc-p5"
version = "0.1.0"
description = "Projet OpenClassRoom - Modèle ML de prédiction du turnover avec MLflow"
authors = ["chaton59 <v.trouillez@gmail.com>"]
readme = "README.md"
packages = [{include = "ml_model"}]

[tool.poetry.dependencies]
python = "^3.12"
mlflow = "^3.8.0"
scikit-learn = "1.6.1"
imbalanced-learn = "0.13.0"
xgboost = "^2.1.0"
scipy = "^1.14.0"
numpy = "^2.0.0"
pandas = "^2.2.0"
joblib = "^1.4.0"
fastapi = "^0.127.1"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = "^2.10.0"
huggingface-hub = "^1.2.3"
python-json-logger = "^4.0.0"
slowapi = "^0.1.9"
gradio = "^6.2.0"
starlette = ">=0.49.1"

[tool.poetry.group.dev.dependencies]
black = "^25.0.0"
flake8 = "^7.0.0"
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
httpx = "^0.28.1"
pytest-asyncio = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

# ===== OUTILS =====

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.flake8]
max-line-length = 88
ignore = ["W503", "E501"]
exclude = [".venv", ".git", "__pycache__", "build", "dist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short --cov=src --cov=app --cov-report=term-missing -ra"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src", "app"]
omit = ["*/tests/*", "*/conftest.py", "*/__pycache__/*"]

[tool.coverage.report]
precision = 2
show_missing = true